--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "buefy",
-  "version": "0.9.7",
+  "name": "buefy-css-variables",
+  "version": "0.9.70",
   "homepage": "https://buefy.org",
-  "description": "Lightweight UI components for Vue.js based on Bulma",
+  "description": "Lightweight UI components for Vue.js based on Bulma CSS Variables",
   "author": "Rafael Beraldo <rafael.pimpa@gmail.com>",
   "maintainers": [
-    "Walter Tommasi <tommsi20@gmail.com>"
+    "Walter Tommasi <tommsi20@gmail.com>",
+    "Daniil Chumachenko <daniil4udo@gmail.com>"
   ],
   "license": "MIT",
   "main": "dist/cjs/index.js",
@@ -23,10 +24,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/buefy/buefy.git"
+    "url": "https://github.com/dino4udo/buefy.git"
   },
   "bugs": {
-    "url": "https://github.com/buefy/buefy/issues"
+    "url": "https://github.com/dino4udo/buefy/issues"
   },
   "vetur": {
     "tags": "dist/vetur/tags.json",
@@ -54,13 +55,15 @@
   },
   "keywords": [
     "bulma",
+    "bulma-css-variables",
+    "css vars",
     "vue",
     "vuejs",
     "vue-bulma",
     "components"
   ],
   "dependencies": {
-    "bulma": "0.9.2"
+    "bulma-css-variables": "https://github.com/dino4udo/bulma-css-variables"
   },
   "peerDependencies": {
     "vue": "^2.6.11"
